--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
-  flutter_svg: ^2.0.7
-  clipboard: ^0.1.3
+  flutter_screenutil: ^5.9.0
+  math_expressions: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -28,8 +28,8 @@ flutter:
   uses-material-design: true
 
   # assets:
-  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  #   - icons/a_dot_ham.svg
 
   # fonts:
   #   - family: Schyler
